# cli

./: README.md
bash/: compress-pdf  copy-content  count-code-lines  count-files  ftp-connect  ftp-dobby  ftp-download  ftp-manager  ftp-upload  get_ftp_password  make-anim  make-gif  make_gif  named-colors  pdf-tools  plt-cmaps  plt-colors  pyplot-cmaps  pyplot-colors  render-equation  rm-space  shwiq  snippet-autocompletion  spm  stopwatch  timer  whoinqueue
minesweeper/: Cargo.toml
minesweeper/src/: game.rs  main.rs  ui.rs
pem/: Cargo.toml
pem/src/: main.rs
python/: extract-polygons  extract_coastlines.py  extract_land_polygons.py  extract_reefs.py  get-timestamp  nc-concat  nc-subset
sort_bib/: Cargo.toml  sort-bib.c  sort-bib.zig  zsort.zig
sort_bib/src/: bib.c  bib.h  main.c  main.rs
soupes/: Cargo.toml  soupes.py
soupes/src/: main.rs
sudoku/: Cargo.toml  main.py
sudoku/src/: big_text.rs  game.rs  main.rs  sudoku.rs  ui.rs
tetris/: Cargo.toml  show-colors  test.py
tetris/src/: big_text.rs  game.rs  main.rs  tetris.rs  ui.rs
tiff_reader/: .clangd  Cargo.toml  Makefile  tiff_reader.c  tiff_reader.zig
tiff_reader/src/: arena.h  geotiff.rs  main.rs  tiff_reader.c
tree/: Cargo.toml
tree/src/: main.rs
wiq/: Cargo.toml  Makefile  wiq.py  zwiq.zig
wiq/src/: collections.h  main.c  main.rs  queue.c  queue.h  string8.h
wiq_c/: CMakeLists.txt
wiq_c/src/: main.c  queue.c
